# pyigl

./: CMakeLists.txt  module.cpp  setup.py
src/: arap.cpp  barycentric.cpp  boundary.cpp  component.cpp  distance.cpp  euler.cpp  harmonic.cpp  header.h  icp.cpp  in_element.cpp  io.cpp  marching_cubes.cpp  progressive_hulls.cpp  reoreint.cpp  smooth.cpp  tetrahedralize.cpp  voxel_grid.cpp
unused/: point_areas.cpp
